--- a/.github/workflows/basic.yml
+++ b/.github/workflows/basic.yml
@@ -15,4 +15,4 @@ jobs:
           install-command: npm install
           build: npm run build
           start: npm start
-          test: nom test
+          test: npm test
